WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174666
WKHTTPCookieStore API tests fail on High Sierra
https://bugs.webkit.org/show_bug.cgi?id=174666
Summary
WKHTTPCookieStore API tests fail on High Sierra
Brady Eidson
Reported
2017-07-19 21:11:39 PDT
WKHTTPCookieStore API tests fail on High Sierra Some of the CFNetwork SPI we were using stopped working on High Sierra. I have a workaround.
rdar://problem/33410271
Attachments
Patch
(8.41 KB, patch)
2017-07-19 21:21 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(8.41 KB, patch)
2017-07-19 21:37 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2017-07-19 21:21:15 PDT
Created
attachment 315968
[details]
Patch
Build Bot
Comment 2
2017-07-19 21:23:55 PDT
Attachment 315968
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/network/cocoa/CookieStorageObserver.mm:63: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andy Estes
Comment 3
2017-07-19 21:32:15 PDT
Comment on
attachment 315968
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=315968&action=review
> Source/WebCore/platform/network/cocoa/CookieStorageObserver.mm:44 > +-(instancetype)initWithObserver:(WebCore::CookieStorageObserver&)theObserver;
Space after the - (and ditto everywhere else)
Brady Eidson
Comment 4
2017-07-19 21:37:31 PDT
Created
attachment 315969
[details]
Patch
WebKit Commit Bot
Comment 5
2017-07-20 07:28:22 PDT
Comment on
attachment 315969
[details]
Patch Clearing flags on attachment: 315969 Committed
r219683
: <
http://trac.webkit.org/changeset/219683
>
WebKit Commit Bot
Comment 6
2017-07-20 07:28:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug